--- a/css/style.css
+++ b/css/style.css
@@ -65,19 +65,27 @@
 }
 
 body {
-    background-color: var(--primary-color);
+    background-color: var(--bg-color);
 }
-
+/* FONT SIZES
+    12px
+    14px
+    16px
+    32px 
+*/
+/* PAAYOS NALANG NG ROOT COLORS */
 :root {
-    --bg-color: #dfdfdf;
-    --bg-dark-color: #c2c2c2;
-    --text-color: #131313;
-    --hover-color: #f66c1d;
-    --border-color: #f6d431;
-    --white-color: #ffffff;
-
-    --primary-color: #f0ebe3;
-    --secondary-color: #d4cda5;
+    /* --primary-color: #f3d2c1;
+    --secondary-color: #d4cda5; */
+    --bg-color: #ffffff;
+    --bg-alt-color: #ffffff;
+    --text-color: #383838;
+    --text-alt-color: #383838;
+    --border-color: #efe5dc;
+    --border-alt-color: #ebdc88;
+    --button-color: #d0b8ac;
+    --button-alt-color: #e9d0c3;
+    --hover-color: #fbfefb;
 }
 
 h1,
@@ -96,18 +104,32 @@ p {
 a {
     font-weight: 400;
 }
-
+img{
+    width: 100%;
+}
 section {
-    padding: 120px 20px;
+    padding: 150px 20px;
+}
+/* CUSTOM BUTTON */
+.main-button{
+    border: 2px solid var(--border-alt-color);
+    padding: 10px 20px;
+    background-color: var(--button-color);
+    border-radius: 20px;
+}
+.main-button:hover{
+    transition: all .5s;
+    background-color: var(--hover-color);
 }
 
 /* HEADER */
 header {
     position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    background-color: var(--bg-color);
+    width: 94%;
+    top: 3%;
+    left: 3%;
+    background-color: var(--border-color);
+    border-radius: 20px;
     z-index: 1000;
     display: flex;
     justify-content: space-between;
@@ -120,6 +142,7 @@ header {
     font-weight: 900;
     font-style: oblique;
     font-size: 1.5rem;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 .nav-links {
@@ -132,32 +155,32 @@ header {
     justify-content: center;
     color: var(--text-color);
     padding: 20px;
-    font-size: 1.2rem;
+    font-size: 16px;
 }
 
 .nav-icons {
-    background-color: var(--bg-dark-color);
+    background-color: var(--bg-color);
     padding: 12px 20px;
     border-radius: 50px;
 }
 
 .nav-icons i {
-    font-size: 1.3rem;
+    font-size: 16px;
 }
 
 .nav-icons a {
     color: var(--text-color);
-    font-size: 1.2rem;
+    font-size: 16px;
 }
 #navmenu{
     color: var(--text-color);
-    font-size: 1.3rem;
+    font-size: 18px;
     margin-left: 10px !important;
     display: none;
 }
 
 .nav-links a:hover {
-    background-color: var(--primary-color);
+    background-color: var(--hover-color);
     border-radius: 20px;
 }
 /* HEADER RESPONSIVENESS */
@@ -179,8 +202,8 @@ header {
         border-radius: 20px;
         margin: 2rem !important;
         padding: 20px;
-        background-color: var(--hover-color);
-        transition: all .5s ease;
+        background-color: var(--border-color);
+        transition: all .5s;
     }
     .nav-links a{
         display: block;
@@ -192,23 +215,30 @@ header {
 
 /* HOME PAGE */
 .home {
-    margin-top: 0 60px !important;
+    margin-top: 30px !important;
+    padding: 20px 160px;
 }
-
+/* HOME PAGE TEMPORARY RESPONSIVENESS */
+@media (max-width: 1060px) {
+    .home {
+    margin-top: 10px !important;
+    padding: 20px;
+    }
+}
 .home h1 {
-    font-size: 3.5rem;
+    font-size: 2.1rem;
     margin-bottom: 20px !important;
 }
 
 /* MORE INFO */
 .more-info {
-    background-color: var(--bg-color);
-    padding: 50px 20px;
+    background-color: var(--border-color);
+    padding: 120px 20px;
 }
 
 .info-icons i {
-    background-color: var(--bg-dark-color);
-    font-size: 2rem;
+    background-color: var(--bg-color);
+    font-size: 32px;
     height: 70px;
     width: 70px;
     border-radius: 50%;
@@ -222,12 +252,13 @@ header {
 
 .cards {
     background-color: var(--white-color);
-    border: 2px solid var(--border-color);
+    border: 2px solid var(--border-alt-color);
     /* max-width: 410px; */
     border-radius: 15px;
     overflow: hidden;
     cursor: pointer;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+    transition: all .5s;
 }
 
 .cards img.property-img {
@@ -245,7 +276,7 @@ header {
 }
 
 .label {
-    background: var(--border-color);
+    background: var(--border-alt-color);
     color: var(--text-color);
     font-size: 12px;
     padding: 4px 10px;
@@ -253,16 +284,16 @@ header {
 }
 
 .label.secondary {
-    background: var(--primary-color);
-    border: 1px solid var(--bg-dark-color);
+    background: var(--border-color);
+    border: 1px solid var(--bg-color);
 }
 
 .heart-icon {
     position: absolute;
     top: 10px;
     right: 10px;
-    background: var(--bg-dark-color);
-    border-radius: 14px;
+    background: var(--border-color);
+    border-radius: 50px;
     padding: 6px;
 }
 
@@ -271,7 +302,7 @@ header {
     margin-top: -40px !important;
     margin-left: 15px !important;
     background: var(--text-color);
-    color: var(--primary-color);
+    color: var(--bg-color);
     padding: 5px 10px;
     border-radius: 8px;
     font-weight: bold;
@@ -346,4 +377,22 @@ header {
     border-radius: 8px;
     font-size: 14px;
     cursor: pointer;
+}
+/* FOOTER */
+footer{
+    padding-top: 40px;
+    background-color: var(--border-color);
+    font-size: 14px;
+}
+.footer-box{
+    font-size: 12px;
+    border: 4px solid var(--bg-color);
+    padding: 3px;
+    border-radius: 5px;
+}
+.compony-line{
+    border-bottom: 2px solid var(--text-color);
+}
+.footer-bottom {
+    border-top: 2px solid var(--text-color);
 }
