--- a/style.css
+++ b/style.css
@@ -148,8 +148,12 @@ header {
     color: var(--text-color);
     font-weight: 900;
     font-style: oblique;
-    font-size: 1.5rem;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: 24px;
+    /* font-family: "Brush Script MT", cursive; */
+}
+.logo img {
+    width: 60px;
+    margin-top: 5px !important;
 }
 
 .nav-links {
@@ -245,7 +249,7 @@ header {
     }
 
     header {
-        padding: 20px 30px;
+        padding: 20px 10px;
     }
 
     .nav-links {
