--- a/css/style.css
+++ b/css/style.css
@@ -118,7 +118,9 @@ section {
 /* CUSTOM BUTTON */
 .main-button {
     border: 2px solid var(--border-alt-color);
-    padding: 10px 20px;
+    width: 150px;
+    height: 45px;
+    font-size: 16px;
     background-color: var(--button-color);
     border-radius: 20px;
     cursor: pointer;
@@ -141,7 +143,7 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 20px 80px;
+    padding: 10px 80px;
 }
 
 .logo {
