--- a/css/style.css
+++ b/css/style.css
@@ -82,7 +82,7 @@ section {
     transition: all .5s;
 }
 
-.map-button {
+.small-button {
     width: 75px;
     height: 25px;
     font-size: 16px;
@@ -92,7 +92,7 @@ section {
     cursor: pointer;
 }
 
-.map-button:hover {
+.small-button:hover {
     transform: scale(1.10);
     transition: all .5s;
 }
