--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@ body {
     --button-alt-color: #e9d0c3;
     --hover-color: #fbfefb; */
 
-    --bg-color: #fafafa;
+    --bg-color: #ffffff;
     --bg-alt-color: #dfdfdf;
     --main-color: #8D0B41;
     --text-color: #42505A;
@@ -62,7 +62,7 @@ a {
 
 
 section {
-    padding: 140px 20px;
+    padding: 120px 0px 0px 0px;
     margin: 2px;
 }
 
@@ -104,7 +104,7 @@ header {
     top: 2%;
     left: 3%;
     background-color: var(--bg-color);
-    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.75);
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.165);
     border-radius: 20px;
     z-index: 1000;
     display: flex;
@@ -222,94 +222,10 @@ header {
 }
 
 
-/* HEADER RESPONSIVENESS */
-@media (max-width: 1060px) {
-    #navmenu {
-        display: initial;
-    }
-
-    header {
-        padding: 20px 10px;
-    }
-
-    .nav-links {
-        position: absolute;
-        display: flex;
-        flex-direction: column;
-        text-align: center;
-        width: 40%;
-        top: 100%;
-        right: -100%;
-        border-radius: 20px;
-        margin: 2rem;
-        padding: 20px;
-        background-color: var(--main-color);
-        transition: all .5s;
-    }
-
-    .nav-links a {
-        display: block;
-        color: var(--bg-color);
-    }
-    .nav-links a:hover {
-        background-color: var(--bg-color);
-        color: var(--main-color);
-        border-radius: 20px;
-    }
-
-    .nav-links.open {
-        right: 0%;
-    }
-}
-
 /* HOME PAGE */
-.home {
-    background: linear-gradient(rgba(0, 0, 0, 0.911), rgba(22, 1, 22, 0.747)), url(../img/house1.jpeg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-}
 .home h1{
-    color: var(--bg-color);
+    font-size: 4vw !important;
 }
-.home span{
-    color: var(--main-color);
-}
-    /* From Uiverse.io by Shaidend */ 
-    .InputContainer {
-    height: 80px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: var(--bg-color);
-    border-radius: 20px;
-    overflow: hidden;
-    cursor: pointer;
-    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.075);
-    }
-
-    .input {
-    width: 500px;
-    height: 100%;
-    font-size: 16px;
-    padding: 20px;
-    caret-color: var(--main-color);
-    }
-
-    .labelforsearch {
-    cursor: pointer;
-    padding: 0px 12px;
-    }
-    .labelforsearch i{
-        color: var(--main-color);
-        font-size: 24px;
-    }
-
-
-
-
-
-
 
 /* HOME PAGE TEMPORARY RESPONSIVENESS */
 @media (max-width: 1060px) {
@@ -458,13 +374,13 @@ header {
 }
 /* TESTIMONIALS SECTION */
 .review{
-    background-color: var(--bg-alt-color);
-    border-radius: 5px;
+    border: 4px solid var(--main-color);
+    border-radius: 10px;
     height: 500px;
 }
 .fa-message{
     font-size: 32px;
-    color: var(--text-color);
+    color: var(--main-color);
 }
 .stars{
     color: var(--main-color);
@@ -475,6 +391,7 @@ header {
 
 /* FOOTER */
 footer {
+    margin-top: 40px;
     padding-top: 40px;
     background-color: var(--bg-alt-color);
     font-size: 14px;
@@ -500,7 +417,7 @@ footer {
 /* CAROUSEL CONTROL */
 .carousel-control-prev,
 .carousel-control-next {
-    background-color: var(--text-color);
+    background-color: var(--main-color);
     width: 50px;
     height: 70px;
     margin: auto;
@@ -511,4 +428,74 @@ footer {
 #carouselExample .carousel-item img {
     height: 100%;
     object-fit: cover;
+}
+
+
+/* AVARTAR FOR CARDS */
+        .avatar {
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+            background: var(--main-color);
+            color: var(--bg-color);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-weight: bold;
+            font-size: 20px;
+        }
+
+        .avatar img {
+            width: 60px;
+            height: 60px;
+            border-radius: 50%;
+            object-fit: cover;
+        }
+
+/* REPONSIVENESS */
+@media (max-width: 480px) { /* small phones */ }
+@media (max-width: 767px) { /* all phones */ }
+@media (max-width: 991px) { /* tablets */ }
+@media (max-width: 1199px) { /* small laptops */ }
+@media (min-width: 1200px) { /* desktops */ }
+
+
+/* small laptops */
+@media (max-width: 1199px) {
+    #navmenu {
+        display: initial;
+    }
+
+    header {
+        padding: 20px 10px;
+    }
+
+    .nav-links {
+        position: absolute;
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        width: 40%;
+        top: 100%;
+        right: -100%;
+        border-radius: 20px;
+        margin: 2rem;
+        padding: 20px;
+        background-color: var(--main-color);
+        transition: all .5s;
+    }
+
+    .nav-links a {
+        display: block;
+        color: var(--bg-color);
+    }
+    .nav-links a:hover {
+        background-color: var(--bg-color);
+        color: var(--main-color);
+        border-radius: 20px;
+    }
+
+    .nav-links.open {
+        right: 0%;
+    }
 }
