--- a/ADMIN/sidebar.css
+++ b/ADMIN/sidebar.css
@@ -14,11 +14,18 @@ body {
 }
 
 :root{
-  --body-color: #f0ebe3;
+  /* --body-color: #f0ebe3;
   --sidebar-color: #ffffff;
   --primary-color: #F0EBE3;
   --toggle-color: #000000;
-  --text-color: #707070;
+  --text-color: #707070; */
+
+  --body-color: #f2f2f2;
+  --sidebar-color: #ffffff;
+  --primary-color: #0b4c8d49;
+  --toggle-color: #000000;
+  --text-color: #42505A;
+
 
   --tra-02: all 0.2s ease;
   --tra-04: all 0.3s ease;
