--- a/ADMIN/accounts.css
+++ b/ADMIN/accounts.css
@@ -1,7 +1,7 @@
 :root {
-    --bg-color: #ffffff;
-    --bg-alt-color: #f2f2f2;
-    --main-color: #8D0B41;
+    --bg-color: #f0ebe3;
+    --bg-alt-color: #ffffff;
+    --main-color: #F0EBE3;
     --text-color: #42505A;
     --text-alt-color: #647887;
     --shadow-color: rgba(0, 0, 0, 0.25);
