--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
+/* =========================
+   GLOBAL FONT 
+========================= */
+html {
+    font-family: "Montserrat", -apple-system, BlinkMacSystemFont,
+        "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+}
+
+body {
+    font-family: inherit;
+}
+
 * {
     font-family: "Montserrat", sans-serif;
     padding: 0;
@@ -18,7 +30,7 @@ body {
     overflow-x: hidden;
 }
 
-/* Chrome, Safari, Edge (WebKit) */
+/* Chrome, Safari, Edge girt */
 input[type=number]::-webkit-outer-spin-button,
 input[type=number]::-webkit-inner-spin-button {
     -webkit-appearance: none;
@@ -30,12 +42,6 @@ input[type=number] {
     -moz-appearance: textfield;
 }
 
-/* FONT SIZES
-    12px
-    14px
-    16px
-    32px 
-*/
 
 :root {
     --bg-color: #ffffff;
